test_case/rust-lang_rust/31380_197986263_1.rs
 rust
foo.rs:20:27: 20:31 error: unused import(s)
foo.rs:20 use std::option::Option::{Some, None}; //~ ERROR unused import
                                    ^~~~  ^~~~
